security/nwpolicies/manifests/client2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client2
  labels:
    app: client2
spec:
  containers:
  - image: curlimages/curl
    command: [ "/bin/sh", "-c", "--" ]
    args: [ "while true; do curl -s -f --connect-timeout 5 http://details/details/1 -I |grep HTTP/1.1; sleep 1; done "]
    imagePullPolicy: IfNotPresent
    name: curl
  restartPolicy: Always
