security/nwpolicies/manifests/details-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: details
spec:
  type: LoadBalancer
  selector:
    app: details
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9080
