security/nwpolicies/manifests/details-denyall-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: details-deny-all
spec:
  podSelector:
    matchLabels:
      app: details
  ingress: []
