security/nwpolicies/manifests/frontend-details-allow-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-allow-details
spec:
  podSelector:
    matchLabels:
      app: details
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: frontend
